--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-scripts",
+  "name": "codegen-support-react-scripts",
   "version": "3.0.1",
-  "description": "Configuration and scripts for Create React App.",
+  "description": "Swagger codegen support Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
     "url": "https://github.com/facebook/create-react-app.git",
@@ -29,6 +29,7 @@
   "types": "./lib/react-app.d.ts",
   "dependencies": {
     "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@svgr/webpack": "4.2.0",
     "@typescript-eslint/eslint-plugin": "1.10.2",
     "@typescript-eslint/parser": "1.10.2",
